Increase z-index of the burger_menu for making it work on course page, Make position of ham-nav to fixed for training page

--- a/app/assets/stylesheets/modules/_nav.styl
+++ b/app/assets/stylesheets/modules/_nav.styl
@@ -367,10 +367,12 @@ nav.profile-nav
 /* Styling of overlay */
 .bm-overlay {
   overflow visible
+  z-index 2 !important
 }
 
 .bm-menu-wrap {
   top: 0px;
+  z-index: 10000 !important;
 }
 
 // making navBar responsive
